--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,137 @@
-.App {
+.nav-elements{
+  font-size: 10px;
+}
+
+
+.nav-main-elements{
+  margin: 30px;
+  font-size: 12px;
+}
+
+.vl {
+  border-left: 2px solid black;
+}
+
+.header{
+  height: 100px;
+  background-color: rgba(90, 142, 184, 0.5);
+}
+
+.header-elements{
+  padding: 10px;
+  font-size: 17px;
+  font-weight: bold;
+}
+
+.main-container{
+  margin-top: 30px;
+}
+
+.predict-container{
+  margin-top: 20px;
+}
+
+.slider-container{
+  display: flex;
+}
+
+.slider-name{
+  margin-top: 20px;
+  width: 150px;
+}
+
+.slider{
+  margin-left: 20px;
+}
+
+.btn-container{
+  margin-top: 50px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.ml-btn{
+  width: 350px;
+  height: 40px;
+  text-align: center;
+  background-color: rgba(46, 111, 165, 0.7);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.formPopup {
+  /* display: none; */
+  position: fixed;
+  left: 67%;
+  top: 40%;
+  transform: translate(-50%, -50%);
+  z-index: 9;
+  border: 2px black solid;
+
+  width: 550px;
+  height: 400px;
+  background-color: rgb(143, 179, 209);
+
+  margin: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.close-btn-container{
+  text-align: center;
+  margin-top: 20px;
+}
+
+
+.pop-up-contents{
+  margin: 20px;
+}
+
+.im-elements{
+  margin-top: 50px;
+}
+
+.annotation{
+  margin-top: 40px;
+}
+
+.login{
+  background-color: #00eaff;
+  width: 1000px;
+  min-height: 300px;
+  border-radius: 10px;
+
+  position: fixed;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+
+.form-elements{
+  margin-top: 40px;
+}
+
+.button-login{
+  background-color: black; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 12px;
+}
+
+.header-login {
+  position: fixed;
+  top:  30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: black;
+}
+
+
+.login-bg {
+  background-color: black;
 }
